fix width overflow homepage

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -9,7 +9,6 @@
 }
 
 #__next {
-    width: 100vw;
     height: 100vh;
 }
 
